option java_package = "com.doteyplay.game.message.proto";
option java_outer_classname = "AccountProBuf";



//import "item.proto";
//import "gate.proto";
//import "npc.proto";
message LoginReq{
  required string account = 1;
  required string key = 2;
  required int32 areaId = 3;
}

message LoginResp{
  required int32 result = 1; //0 success ; 1 auth fail ;2 没有角色，需要创建;3 角色名重复，角色创建失败;
  optional PRole role=2;
}

message CreateRoleReq
{
  required int32 spriteId = 1;
  required string roleName = 2;
}

message PRole{
   required int64 roleId=1;//玩家id
   required string roleName=2;//玩家名字
   required int32 vipLvl=3;//vip等级
   required int32 coin=4;//游戏币
   required int32 rmb=5;//人民币
   required int32 stamina=6;//体力
   required int32 leftHpItemNum=7;//剩余血瓶数
   required int32 curHp=8;//当前剩余血量
   required int32 ranking=9;//当前排名
   required int32 curLibId=10;//当前战斗选择的牌库
   required int64 userId=11;//userid
}

message PUpRole{
   required int32 fieldType=1;//字段类型
   required int32 addValue=2;//增加的值
   required int32 finalValue=3;//最终值
   required string itemType=4;//类型 保留字段
   required int64 updatePkId=5;//更新的唯一id
   optional string param=6;//参数
}

